--- a/src/app/services/services.component.css
+++ b/src/app/services/services.component.css
@@ -1,11 +1,19 @@
 #heading {
     font-size: 50px;
-    color: white;
+    color: goldenrod;
     font-weight: bold;
     text-align: center;
     margin-bottom: 80px;
+    
   }
-
+  hr{
+   color: gray;
+   height: 2px;
+   opacity: 0.8;
+}
+.row{
+   padding-bottom: 50px;
+}
  #service1 {
     color: lightsalmon;
  }
@@ -18,6 +26,7 @@
  #service4 {
     color: lemonchiffon;
  }
- #service5 {
-    color: gray;
- }
+#bgserv{
+  background-image: url('../../assets/Images/bgserve.jpeg'); 
+  background-position: center;
+}
